--- a/MAAS-SFRThelper/Views/SphereDialog.xaml
+++ b/MAAS-SFRThelper/Views/SphereDialog.xaml
@@ -22,6 +22,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
 
         </Grid.RowDefinitions>
@@ -92,9 +94,19 @@
             <Button  Height="26"  Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Top" Content="Create" Command="{Binding CreateLatticeCommand}" Style="{x:Null}" />
             <TextBlock Foreground="red" Text="{Binding LatticeValidationText}" Visibility="{Binding LVVis, Converter={StaticResource localVisibilityConverter}}" />
         </StackPanel>
-        <ProgressBar Grid.Row="5" Margin="10" Maximum="100" Minimum="0" Value="{Binding ProgressValue}" 
+        <Label Grid.Row="5" Height="26" Margin="10" Content="Tumor Edge Buffer (mm)" />
+        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding TumourEdgeBuffer}" Height="26" Margin="10" Width="123" />
+        <Label Grid.Row="5" Grid.Column="2" Height="26" Margin="10" Content="OAR Buffer (mm)" />
+        <TextBox Grid.Row="5" Grid.Column="3" Text="{Binding OARBuffer}" Height="26" Margin="10" Width="123" />
+
+        <Label Grid.Row="6" Height="26" Margin="10" Content="Boost Shell (mm)" />
+        <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding BoostShell}" Height="26" Margin="10" Width="123" />
+        <Label Grid.Row="6" Grid.Column="2" Height="26" Margin="10" Content="Outer Ring (mm)" />
+        <TextBox Grid.Row="6" Grid.Column="3" Text="{Binding OuterRing}" Height="26" Margin="10" Width="123" />
+        <CheckBox Grid.Row="6" Grid.ColumnSpan="4" Margin="10" Content="Overwrite existing" IsChecked="{Binding OverwriteStructures}" HorizontalAlignment="Left" />
+        <ProgressBar Grid.Row="7" Margin="10" Maximum="100" Minimum="0" Value="{Binding ProgressValue}"
                      Grid.ColumnSpan="4" Height="20"/>
-        <TextBlock Grid.Row ="6" Grid.ColumnSpan="4" Margin="10" Text="{Binding Output}">
+        <TextBlock Grid.Row ="8" Grid.ColumnSpan="4" Margin="10" Text="{Binding Output}">
 
                 </TextBlock>
         </Grid>
